WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76588
editingAttributedStringFromRange in WebHTMLConverter does not handle NSUnderlineStyleAttributeName
https://bugs.webkit.org/show_bug.cgi?id=76588
Summary
editingAttributedStringFromRange in WebHTMLConverter does not handle NSUnderl...
Enrica Casucci
Reported
2012-01-18 16:59:52 PST
This method is called to convert HTML into an NSAttributedString in several methods of the NSTextInput protocol. The conversion currently fails to handle the underline style, causing problems with the Inspector Bar in Mail on Mac.
Attachments
Patch
(3.88 KB, patch)
2012-01-18 17:06 PST
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2012-01-18 17:00:07 PST
<
rdar://problem/9325183
>
Enrica Casucci
Comment 2
2012-01-18 17:06:30 PST
Created
attachment 123040
[details]
Patch
mitz
Comment 3
2012-01-18 17:17:15 PST
Comment on
attachment 123040
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=123040&action=review
> Tools/TestWebKitAPI/Tests/mac/InspectorBar.mm:68 > + NSDictionary *attributes = [attrString attributesAtIndex:0 effectiveRange:nil];
I think the effectiveRange parameter is a pointer to an NSRange, so you should write 0, not nil.
Enrica Casucci
Comment 4
2012-01-19 08:50:58 PST
> I think the effectiveRange parameter is a pointer to an NSRange, so you should write 0, not nil.
Thanks for the review! I will fix this.
Enrica Casucci
Comment 5
2012-01-19 08:56:03 PST
http://trac.webkit.org/changeset/105416
Alexey Proskuryakov
Comment 6
2012-01-19 09:09:47 PST
This could be tested with a regular layout test - we expose attributedSubstringFromRange in DumpRenderTree.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug