editingAttributedStringFromRange in WebHTMLConverter does not handle NSUnderlineStyleAttributeName. https://bugs.webkit.org/show_bug.cgi?id=76588 <rdar://problem/9325183>

Source/WebCore:

Reviewed by Dan Bernstein.

Added TestWebKitAPI test.

* platform/mac/HTMLConverter.mm:
(+[WebHTMLConverter editingAttributedStringFromRange:]):

Tools:

Added test.

Reviewed by Dan Bernstein.

* TestWebKitAPI/Tests/mac/InspectorBar.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/93461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105416 268f45cc-cd09-0410-ab3c-d52691b4dbfc